--- a/css/default.css
+++ b/css/default.css
@@ -15,6 +15,30 @@
   display: inline;
 }
 
+.row {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+}
+
+.rowhead {
+  width: 12.5%;
+  text-align: right;
+  padding-right: 0.2em;
+  font-weight: bold;
+}
+
+.colhead {
+  width: 20%;
+  font-weight: bold;
+}
+
+.inputcell {
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+}
+
 #main {
   margin: 2vw;
   padding: 1em;
@@ -37,6 +61,7 @@ button {
   padding: 0.25em;
   border-radius: 0.2em;
   font-size: 1.1em;
+  margin: 0 5px 0 5px;
 }
 
 button:hover {
@@ -45,6 +70,7 @@ button:hover {
 }
 
 input {
+  width: 90%;
   background-color: #FFFFF0;
   border: 1px solid grey;
   padding: 0.25em;
